syntax = "proto3";

option csharp_namespace = "Basket.API.Grpc";

package basket;

import "google/protobuf/empty.proto";

service Basket {
  rpc GetOrCreateBasketById (GetOrCreateBasketByIdRequest) returns (BuyerBasket);
  rpc UpdateBasket (BuyerBasket) returns (BuyerBasket);
  rpc DeleteBasketById (DeleteBasketByIdRequest) returns (google.protobuf.Empty);
}

message GetOrCreateBasketByIdRequest {
  string buyer_id = 1;
}

message DeleteBasketByIdRequest {
  string buyer_id = 1;
}

message BuyerBasket {
  string buyer_id = 1;
  repeated BasketItem items = 2;
}

message BasketItem {
  string id = 1;
  string pizza_id = 2;
  string pizza_name = 3;
  string price = 4;
  int32 quantity = 5;
}
